ops/op2/test_cases_fail/lifetimes.stderr
error[E0597]: `arg0` does not live long enough
 --> $WORKSPACE/ops/op2/test_cases_fail/lifetimes.rs
  |
  | #[op2(fast)]
  | ^^^^^^^^^^^-
  | |          |
  | |          `arg0` dropped here while still borrowed
  | borrowed value does not live long enough
  | argument requires that `arg0` is borrowed for `'static`
  |
  = note: this error originates in the attribute macro `op2` (in Nightly builds, run with -Z macro-backtrace for more info)

error[E0521]: borrowed data escapes outside of associated function
 --> $WORKSPACE/ops/op2/test_cases_fail/lifetimes.rs
  |
  | #[op2(fast)]
  | ^^^^^^^^^^^^
  | |
  | `fast_api_callback_options` is a reference that is only valid in the associated function body
  | `fast_api_callback_options` escapes the associated function body here
  | lifetime `'s` defined here
  | argument requires that `'s` must outlive `'static`
  |
  = note: this error originates in the attribute macro `op2` (in Nightly builds, run with -Z macro-backtrace for more info)

error[E0597]: `arg0_temp` does not live long enough
 --> $WORKSPACE/ops/op2/test_cases_fail/lifetimes.rs
  |
  | #[op2(fast)]
  | ^^^^^^^^^^^-
  | |          |
  | |          `arg0_temp` dropped here while still borrowed
  | borrowed value does not live long enough
  | argument requires that `arg0_temp` is borrowed for `'static`
  |
  = note: this error originates in the attribute macro `op2` (in Nightly builds, run with -Z macro-backtrace for more info)
